test/tests/stages/18_structures/invalid_types/initializers/initialize_nested_static_struct_member_wrong_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  struct
  identifier(s)
  {
  double
  identifier(d)
  ;
  void
  *
  identifier(arr)
  [
  const int(3)
  ]
  ;
  }
  ;
  struct
  identifier(s)
  identifier(x)
  =
  {
  const double(0.0)
  ,
  {
  const double(1.0)
  }
  }
  ;
